tests/baselines/reference/decoratorMetadataGenericTypeVariableDefault.errors.txt
decoratorMetadataGenericTypeVariableDefault.ts(2,4): error TS2304: Cannot find name 'Decorate'.


==== decoratorMetadataGenericTypeVariableDefault.ts (1 errors) ====
    export class C<TypeVariable = string> {
      @Decorate
       ~~~~~~~~
!!! error TS2304: Cannot find name 'Decorate'.
      member: TypeVariable;
    }
    